// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slideshow /> by default should return the right structure 1`] = `
<Slideshow
  hasShadow={true}
  headingText={null}
  images={
    Array [
      Object {
        "alternativeText": "Two cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Two more cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two more cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Much cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Much cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "No dogs",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "No dogs",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
    ]
  }
  isRounded={true}
  isShowingBulletNavigation={true}
  isStretched={false}
>
  <ImageGallery
    additionalClass=""
    items={
      Array [
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two cats",
          "originalTitle": "Two cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two more cats",
          "originalTitle": "Two more cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Much cats",
          "originalTitle": "Much cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "No dogs",
          "originalTitle": "No dogs",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
      ]
    }
    lazyLoad={true}
    onSlide={[Function]}
    renderLeftNav={[Function]}
    renderRightNav={[Function]}
    showBullets={true}
    showFullscreenButton={false}
    showPlayButton={false}
    showThumbnails={false}
  >
    <div />
  </ImageGallery>
</Slideshow>
`;

exports[`<Slideshow /> if \`ImageGallery\` \`props.hasShadow === false\` should get the right props 1`] = `
<Slideshow
  hasShadow={false}
  headingText={null}
  images={
    Array [
      Object {
        "alternativeText": "Two cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Two more cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two more cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Much cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Much cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "No dogs",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "No dogs",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
    ]
  }
  isRounded={true}
  isShowingBulletNavigation={true}
  isStretched={false}
>
  <ImageGallery
    additionalClass="no-shadow"
    items={
      Array [
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two cats",
          "originalTitle": "Two cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two more cats",
          "originalTitle": "Two more cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Much cats",
          "originalTitle": "Much cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "No dogs",
          "originalTitle": "No dogs",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
      ]
    }
    lazyLoad={true}
    onSlide={[Function]}
    renderLeftNav={[Function]}
    renderRightNav={[Function]}
    showBullets={true}
    showFullscreenButton={false}
    showPlayButton={false}
    showThumbnails={false}
  >
    <div />
  </ImageGallery>
</Slideshow>
`;

exports[`<Slideshow /> if \`ImageGallery\` \`props.isRounded === false\` should get the right props 1`] = `
<Slideshow
  hasShadow={true}
  headingText={null}
  images={
    Array [
      Object {
        "alternativeText": "Two cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Two more cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two more cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Much cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Much cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "No dogs",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "No dogs",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
    ]
  }
  isRounded={false}
  isShowingBulletNavigation={true}
  isStretched={false}
>
  <ImageGallery
    additionalClass="no-border-radius"
    items={
      Array [
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two cats",
          "originalTitle": "Two cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two more cats",
          "originalTitle": "Two more cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Much cats",
          "originalTitle": "Much cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "No dogs",
          "originalTitle": "No dogs",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
      ]
    }
    lazyLoad={true}
    onSlide={[Function]}
    renderLeftNav={[Function]}
    renderRightNav={[Function]}
    showBullets={true}
    showFullscreenButton={false}
    showPlayButton={false}
    showThumbnails={false}
  >
    <div />
  </ImageGallery>
</Slideshow>
`;

exports[`<Slideshow /> if \`ImageGallery\` \`props.isStretched === true\` should return the right structure 1`] = `
<Slideshow
  hasShadow={true}
  headingText={null}
  images={
    Array [
      Object {
        "alternativeText": "Two cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Two more cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two more cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Much cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Much cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "No dogs",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "No dogs",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
    ]
  }
  isRounded={true}
  isShowingBulletNavigation={true}
  isStretched={true}
>
  <ImageGallery
    additionalClass="fit-height"
    items={
      Array [
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two cats",
          "originalTitle": "Two cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two more cats",
          "originalTitle": "Two more cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Much cats",
          "originalTitle": "Much cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "No dogs",
          "originalTitle": "No dogs",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
      ]
    }
    lazyLoad={true}
    onSlide={[Function]}
    renderLeftNav={[Function]}
    renderRightNav={[Function]}
    showBullets={true}
    showFullscreenButton={false}
    showPlayButton={false}
    showThumbnails={false}
  >
    <div />
  </ImageGallery>
</Slideshow>
`;

exports[`<Slideshow /> if \`images\` have \`descriptionText\` should return the right structure 1`] = `
<Slideshow
  hasShadow={true}
  headingText={null}
  images={
    Array [
      Object {
        "descriptionText": "frrrrrp",
        "url": "some url",
      },
    ]
  }
  isRounded={true}
  isShowingBulletNavigation={true}
  isStretched={false}
>
  <Paragraph
    size="medium"
    weight={null}
  >
    <p
      className=""
    >
      frrrrrp
    </p>
  </Paragraph>
  <ImageGallery
    additionalClass=""
    items={
      Array [
        Object {
          "original": "some url",
          "originalAlt": undefined,
          "originalTitle": undefined,
          "sizes": undefined,
          "srcSet": undefined,
        },
      ]
    }
    lazyLoad={true}
    onSlide={[Function]}
    renderLeftNav={[Function]}
    renderRightNav={[Function]}
    showBullets={true}
    showFullscreenButton={false}
    showPlayButton={false}
    showThumbnails={false}
  >
    <div />
  </ImageGallery>
</Slideshow>
`;

exports[`<Slideshow /> if \`props.headingText\` is passed should return the right structure 1`] = `
<Slideshow
  hasShadow={true}
  headingText="🎧"
  images={
    Array [
      Object {
        "alternativeText": "Two cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Two more cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Two more cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "Much cats",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "Much cats",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
      Object {
        "alternativeText": "No dogs",
        "sizes": "100w",
        "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        "title": "No dogs",
        "url": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
      },
    ]
  }
  isRounded={true}
  isShowingBulletNavigation={true}
  isStretched={false}
>
  <Heading
    className={null}
    isColorInverted={false}
    size="medium"
    textAlign={null}
  >
    <Header
      as="h3"
      className={null}
      inverted={false}
      textAlign={null}
    >
      <h3
        className="ui header"
      >
        🎧
      </h3>
    </Header>
  </Heading>
  <ImageGallery
    additionalClass=""
    items={
      Array [
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two cats",
          "originalTitle": "Two cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Two more cats",
          "originalTitle": "Two more cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "Much cats",
          "originalTitle": "Much cats",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
        Object {
          "original": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
          "originalAlt": "No dogs",
          "originalTitle": "No dogs",
          "sizes": "100w",
          "srcSet": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=400&h=400&mode=max 320w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=800&h=800&mode=max 768w,
        https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg?w=1024&h=1000&mode=max 1024w",
        },
      ]
    }
    lazyLoad={true}
    onSlide={[Function]}
    renderLeftNav={[Function]}
    renderRightNav={[Function]}
    showBullets={true}
    showFullscreenButton={false}
    showPlayButton={false}
    showThumbnails={false}
  >
    <div />
  </ImageGallery>
</Slideshow>
`;
